--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,15 +14,20 @@ main{
     width: 878px;
     padding: 34px;
 }
+hr{
+    border: 2px solid #d1d1d1;
+}
 /* top players style */
 .section-title{
     color: #562eff;
     font-size: 24px;
+    margin-top: 2px;
 }
 .players{
     display: grid;
     /* grid-template-columns: repeat(1fr, 1fr, 1fr); */
     grid-template-columns: repeat(3, 1fr);
+    row-gap: 30px;
 }
 .player{
     display: flex;
@@ -34,4 +39,5 @@ main{
 }
 .player-name{
     margin-left: 17px;
+    font-size: 18px;
 }
